<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditVehicleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.Tankverhalten.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_vehicle"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/Theme.Tankverhalten.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                tools:context=".MainActivity">


                <TextView
                    android:id="@+id/displayname_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Anzeigename"
                    android:textColor="@color/FHGreen"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <EditText
                    android:id="@+id/display_name_vehicle_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/displayname"
                    android:inputType="text"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/licenseplate_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_plate_header"
                    android:textColor="@color/FHGreen"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/license_plate_edit_vehicle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/license_plate_hint"
                    android:inputType="text"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/consumption_urban_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/consumption_city_header"
                    android:textColor="@color/FHGreen"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/consumption_urban_vehicle_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/consumption_city_hint"
                    android:inputType="numberDecimal"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/consumption_combined_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/consumption_combined_header"
                    android:textColor="@color/FHGreen"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/consumption_combined_vehicle_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/consumption_combined_hint"
                    android:inputType="numberDecimal"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/consumption_outside_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/consumption_country_header"
                    android:textColor="@color/FHGreen"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/consumption_outside_vehicle_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/consumption_country_hint"
                    android:inputType="numberDecimal"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/mileage_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/mileage_header"
                    android:textColor="@color/FHGreen"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/mileage_vehicle_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mileage_hint"
                    android:inputType="number"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/fuel_level_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fuelLevel_header"
                    android:textColor="@color/FHGreen"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/fuel_level_vehicle_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/fuelLevel_hint"
                    android:inputType="number"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tank_volume_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/volume_header"
                    android:textColor="@color/FHGreen"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/tank_volume_vehicle_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/volume_hint"
                    android:inputType="number"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/emissions_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/co2_header"
                    android:textColor="#00ACA2"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/emissions_vehicle_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/co2_hint"
                    android:inputType="number"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/select_vehicle_type_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicleType_header"
                    android:textColor="@color/FHGreen"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/vehicle_select_block"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/car_radio_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/vehicleType_car" />

                    <RadioButton
                        android:id="@+id/motorcycle_radio_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/vehicleType_motorcycle" />

                    <RadioButton
                        android:id="@+id/transporter_radio_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/vehicleType_transporter" />
                </RadioGroup>

                <TextView
                    android:id="@+id/permission_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_header"
                    android:textColor="@color/FHGreen"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/permission_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/date_hint"
                    android:inputType="date"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/inspection_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inspection_header"
                    android:textColor="@color/FHGreen"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/inspection_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/date_hint"
                    android:inputType="date"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/confirm_editing_vehicle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_Text" />

                <Button
                    android:id="@+id/cancel_editing_vehicle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_Text" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>